Modificacion en los archivos de alumnos
Commit que contiene la modificación de los archivos de alumnos

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -6,12 +6,13 @@
     </HEAD>
     <body>
         <p>Acceso al Sistema TitulaTEC</p>
-        <form>
+        <form action="principal.html">
             <label>Email:</label>
             <input type="email" name="email">
-            <labe>Contraseña:</labe>
+            <label>Contraseña:</label>
             <input type="password" name="pwd">
             <a href="/Users/roberto/Documents/ITESZ/Agosto-Diciembre 2020/Programación Web/Unidad 2/Proyecto/principal.html">Entrar</a>
+            <a href="Alumnos/altaAlumno.html">Registrar Cuenta</a>
         </form>
     </body>
 </HTML>
