--- a/Proyecto/Alumnos/ConsultaAlumnos.html
+++ b/Proyecto/Alumnos/ConsultaAlumnos.html
@@ -6,13 +6,29 @@
     </head>
     <body>
         <h1>LISTA DE ALUMNOS</h1>
-        <a href="./altaAlumno.html">Registrar Alumno</a>
+        <a href="./altaAlumno.html"><img src="../Imagenes/add.gif">Registrar Alumno</a>
         <table border="1">
-            <th>NC</th>
+            <th>No.Control</th>
             <th>Nombre</th>
+            <th>Sexo</th>
+            <th>Email</th>
+            <th>Telefono</th>
+            <th>Carrera</th>
+            <th>Creditos</th>
+            <th>Año Egreso</th>
+            <th>Editar</th>
+            <th>Eliminar</th>
             <tr>
-                <td>02010911</td>
+                <td>14010911</td>
                 <td>Maria Torres Lemus</td>
+                <td>F</td>
+                <td>mtorres@gmail.com</td>
+                <td>351-178-6718</td>
+                <td>Ing. en Sistemas Computacionales</td>
+                <td>260</td>
+                <td>2019</td>
+                <td><a href="editarAlumno.html"><img src="../Imagenes/editar.png"></a></td>
+                <td><a href="eliminarAlumno.html"><img src="../Imagenes/eliminar.png"></a></td>
             </tr>
         </table>
     </body>
