--- a/Proyecto/Edificios/eliminarEdificios.html
+++ b/Proyecto/Edificios/eliminarEdificios.html
@@ -11,7 +11,7 @@
         <nav>
         <p>Menu</p>
         <ul>
-            <li><a href="./Edificios/consultaEdificios.html">Edificios</a></li>
+            <li><a href="./consultaEdificios.html">Edificios</a></li>
             
         </ul>
         </nav>
