--- a/Proyecto/Edificios/eliminarEdificios.html
+++ b/Proyecto/Edificios/eliminarEdificios.html
@@ -17,7 +17,7 @@
         </nav>
         <main>
             <section>
-                <h1>ELIMINACIÓN DE Edificios</h1>
+                <h1>ELIMINACIÓN DE EDIFICIOS</h1>
                 <form>
                 <div id="datosEstructurales">   
                            <p>¿Estas seguro de eliminar el edificio : <b>Centro de computo</b>?</p>
