--- a/Proyecto/Administrativos/modificarAdministrativo.html
+++ b/Proyecto/Administrativos/modificarAdministrativo.html
@@ -26,7 +26,7 @@
         <nav>
         <p>Menu</p>
         <ul>
-            <li>Administrativos</li>
+            <li><a href="./Administrativos/consultaAdministrativo.html">Administrativos</a></li>
             <li><a href="./Alumnos/ConsultaAlumnos.html">Alumnos</a></li>
             <li>Docentes</li>
             <li>Actos</li>
