--- a/Proyecto/Administrativos/AltaAdministrativos.html
+++ b/Proyecto/Administrativos/AltaAdministrativos.html
@@ -21,7 +21,7 @@
     </nav>
     <main>
         <section>
-            <h1>Registrar Alumnos</h1>
+            <h1>Registrar Adminitrativo</h1>
             <form>
                 <div id="datosPersonales">
                     <fieldset>
