--- a/Proyecto/Edificios/consultaEdificios.html
+++ b/Proyecto/Edificios/consultaEdificios.html
@@ -14,7 +14,7 @@
                 <td>01</td>
                 <td>Centro de Computo</td>
                 <td><a href="editarEdificio.html"><img src="../Imagenes/editar.png"></a></td>
-                <td><a href="eliminarEdificio.html"><img src="../Imagenes/eliminar.png"></a></td>
+                <td><a href="eliminarEdificios.html"><img src="../Imagenes/eliminar.png"></a></td>
             </tr>
         </table>
     </body>
