--- a/Proyecto/Evidencias/ConsultaEvidencias.html
+++ b/Proyecto/Evidencias/ConsultaEvidencias.html
@@ -13,12 +13,16 @@
         <th>Nombre</th>
         <th>Archivo</th>
         <th>Estatus</th>
+        <th>Modificar</th>
+        <th>Eliminar</th>
         <tr>
             <td>02</td>
             <td>1000</td>
             <td>Maria Torres Lemus</td>
             <td>111</td>
             <td>A</td>
+            <td><a href="editarAlumno.html"><img src="../Imagenes/editar.png"></a></td>
+            <td><a href="eliminarAlumno.html"><img src="../Imagenes/eliminar.png"></a></td>
         </tr>
     </table>
 </body>
