--- a/Proyecto/Evidencias/ConsultaEvidencias.html
+++ b/Proyecto/Evidencias/ConsultaEvidencias.html
@@ -21,8 +21,8 @@
             <td>Maria Torres Lemus</td>
             <td>111</td>
             <td>A</td>
-            <td><a href="editarAlumno.html"><img src="../Imagenes/editar.png"></a></td>
-            <td><a href="eliminarAlumno.html"><img src="../Imagenes/eliminar.png"></a></td>
+            <td><a href="modificacion_Evidencias.html"><img src="../Imagenes/editar.png"></a></td>
+            <td><a href="eliminacion_Evidencias.html"><img src="../Imagenes/eliminar.png"></a></td>
         </tr>
     </table>
 </body>
