Aplicación de estilos
Se comparten las modificaciones de los archivos en los que se aplicaron los estilos.

--- a/Proyecto/Alumnos/editarAlumno.html
+++ b/Proyecto/Alumnos/editarAlumno.html
@@ -16,6 +16,11 @@
                 background-color: red;
                 border:1px;
             }
+            li{
+                color:aqua;
+                font-family: cursive;
+                font-weight: 200;
+            }
         </style>
         <link href="css/bootstrap.css">
     </head>
