--- a/Proyecto/Alumnos/altaAlumno.html
+++ b/Proyecto/Alumnos/altaAlumno.html
@@ -3,17 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <title>TitulaTEC</title>
+        <link rel="stylesheet" href="../CSS/estilo.css">
     </head>
     <body>
         <header>
-            INSTITUTO TECNOLOGICO DE ESTUDIOS SUPERIORES DE ZAMORA
+            <h1 id="textoEncabezado">
+                INSTITUTO TECNOLOGICO DE ESTUDIOS SUPERIORES DE ZAMORA
+            </h1>
         </header>
         <nav>
-        <p>Menu</p>
+        <p style="color:red;">Menu</p>
         <ul>
             <li><a href="./Alumnos/ConsultaAlumnos.html">Alumnos</a></li>
-            <li>Docentes</li>
-            <li>Actos</li>
+            <li><a>Docentes</a></li>
+            <li><a>Actos</a></li>
         </ul>
         </nav>
         <main>
@@ -75,11 +78,14 @@
                     </fieldset>
                 </div>
                 </form>
-                <a href="./ConsultaAlumnos.html">Regresar</a>
+                <a href="./ConsultaAlumnos.html" class="linkButton">Regresar</a>
+                <a href="#" class="linkButton">Otro link</a>
             </section>
         </main>
         <footer>
-            Elaborado por RSZ
+            <h1 id="textoPiePagina">
+                 Elaborado por RSZ
+            </h1>
         </footer>
     </body>
 </html>
