Creación de menus
Creación de menus vertical y horizontal

--- a/Proyecto/Alumnos/ConsultaAlumnos.html
+++ b/Proyecto/Alumnos/ConsultaAlumnos.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>TitulaTEC</title>
+        <link href="../CSS/estilo.css" rel="stylesheet">
     </head>
     <body>
         <h1>LISTA DE ALUMNOS</h1>
         <a href="./altaAlumno.html"><img src="../Imagenes/add.gif">Registrar Alumno</a>
-        <table border="1">
+        <table>
             <th>No.Control</th>
             <th>Nombre</th>
             <th>Sexo</th>
