--- a/Proyecto/Alumnos/altaAlumno.html
+++ b/Proyecto/Alumnos/altaAlumno.html
@@ -12,11 +12,16 @@
             </h1>
         </header>
         <nav>
-        <p style="color:red;">Menu</p>
+        <p class="textoMenu">Menu</p>
         <ul>
-            <li><a href="./Alumnos/ConsultaAlumnos.html">Alumnos</a></li>
-            <li><a>Docentes</a></li>
-            <li><a>Actos</a></li>
+            <li><a href="./Alumnos/ConsultaAlumnos.html" class="active">Alumnos</a></li>
+            <li><a href="#" > Docentes</a></li>
+            <li><a href="#">Actos</a></li>
+            <li><a href="#">Opciones</a></li>
+            <li><a href="#">Aulas</a></li>
+            <li><a href="#">Edificios</a></li>
+            <li><a href="#">Administraticos</a></li>
+            <li><a href="#">Aulas</a></li>    
         </ul>
         </nav>
         <main>
