--- a/Proyecto/Alumnos/altaAlumno.html
+++ b/Proyecto/Alumnos/altaAlumno.html
@@ -83,6 +83,7 @@
                     </fieldset>
                 </div>
                 </form>
+                <p>Un parrafo</p>
                 <a href="./ConsultaAlumnos.html" class="linkButton">Regresar</a>
                 <a href="#" class="linkButton">Otro link</a>
             </section>
